subs.css
.subs-btn-settings {
  height: 24px;
  padding: 0 10pt !important;
  background-image: url('images/icon_settings.svg'), /*works in Firefox*/ url('chrome-extension://__MSG_@@extension_id__/images/icon_settings.svg'); /*works in Chrome*/
  background-repeat: no-repeat;
}

.subs-btn-hide-watched-checked, .subs-btn-hide-watched-unchecked {
  opacity: .8;
  margin: 0 12px !important;
}

.subs-btn-hide-watched-checked .toggle-button {
  background-color: var(--paper-toggle-button-checked-button-color, var(--primary-color));

  background-image: url('images/markunwatched.svg'), /*works in Firefox*/ url('chrome-extension://__MSG_@@extension_id__/images/markunwatched.svg'); /*works in Chrome*/
  background-size: cover;
  transform: translate(16px, 0);
}

.subs-btn-hide-watched-unchecked .toggle-button {
  background-image: url('images/markwatched.svg'), /*works in Firefox*/ url('chrome-extension://__MSG_@@extension_id__/images/markwatched.svg'); /*works in Chrome*/
  background-size: cover;
}

.subs-btn-mark-watched, .subs-btn-mark-unwatched {
  height: 24px;
  position: absolute;
  bottom: 3px;
  left: 3px;
  border: none;
  border-radius: 2px;
  background-color: hsl(0, 0%, 6.7%);
  opacity: .6;
  -webkit-transition-duration: 0.4s; /* Safari */
  transition-duration: 0.4s;
}

.subs-btn-mark-watched {
  display: none;
  width: 24px;
  background-image: url('images/markwatched.svg'), /*works in Firefox*/ url('chrome-extension://__MSG_@@extension_id__/images/markwatched.svg'); /*works in Chrome*/
  background-size: cover;
}

.subs-btn-mark-unwatched {
  width: 95px;
  background-image: url('images/markunwatched.svg'), /*works in Firefox*/ url('chrome-extension://__MSG_@@extension_id__/images/markunwatched.svg'); /*works in Chrome*/
  background-size: cover;
}

.subs-btn-mark-watched:hover, .subs-btn-mark-unwatched:hover, .subs-btn-hide-watched-checked:hover, .subs-btn-hide-watched-unchecked:hover {
  opacity: .8;
  cursor: pointer;
}

.subs-btn-mark-watched:active, .subs-btn-mark-unwatched:active, .subs-btn-hide-watched-checked:active, .subs-btn-hide-watched-unchecked:active {
  opacity: 1.0;
  cursor: pointer;
}

ytd-grid-video-renderer.style-scope.ytd-grid-renderer:hover .subs-btn-mark-watched {
  display: inline-block;
}

.subs-grid-menu-item {
  margin: 0 12px !important;
}

.subs-grid-menu-mark-all {
  opacity: 0.7;
}

.subs-grid-menu-mark-all:hover {
  cursor: pointer;
  opacity: 0.9;
}

.subs-grid-menu-mark-all:active {
  opacity: 1.0;
  cursor: pointer;
}

#osasoft-better-subscriptions_subs-grid {
  vertical-align: -3px;
}

#end.ytd-masthead {
  min-width: auto !important;
}

